<resources>
    <string name="app_name">Kontalk</string>
    <string name="app_name_offline">Kontalk (offline)</string>
    <string name="app_description">Community-driven instant messaging network</string>
    <string name="service_name">Message Center</string>
    <string name="authenticator_name">Authentication Service</string>
    <string name="sync_service_name">Sync Contacts</string>
    <string name="download_service">Download Service</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="send">Send</string>
    <string name="menu_compose">Compose</string>
    <string name="menu_create_group">Create group</string>
    <string name="menu_delete_all">Delete chats</string>
    <string name="menu_search">Search</string>
    <string name="mykey_activity_title">My personal key</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_offline">Go offline</string>
    <string name="menu_online">Go online</string>
    <string name="menu_import_key">Import key</string>
    <string name="menu_import_device">Register from another device</string>
    <string name="menu_manual_verification">Already have a code?</string>
    <string name="pref_account_settings">Account</string>
    <string name="pref_account_settings_system">Manage account</string>
    <string name="pref_network_settings">Network</string>
    <string name="pref_network_uri">Manual server address</string>
    <string name="pref_title_network_uri">This will override server list automatic management</string>
    <string name="number_validation_intro1">Please enter your name, select your country code and input your mobile phone number. More instructions will be provided in the next screen.</string>
    <string name="number_validation_intro2">If you are unable to receive calls or SMS on this device, insert a phone number you own: we will associate that number to this device.</string>
    <string name="code_validation_intro">You should receive a SMS or a call to your number briefly.</string>
    <string name="code_validation_intro2">Please insert the code you receive or hear below.</string>
    <string name="code_validation_intro3">Please note that SMS or call might come from a foreign number.</string>
    <string name="code_validation_intro_missed_call">You should receive a missed call to your number briefly. <b>PLEASE DO NOT ANSWER THE CALL.</b></string>
    <string name="code_validation_intro2_missed_call">Please insert the last %d digits of the number you will be called by.</string>
    <string name="code_validation_intro_callerid">Tap the button below and give a missed call to that phone number. Please note that <b>the call must be initiated from the phone number you are registering</b>. The call is free of charge if you hang up as soon as you hear the first ring. It will be enough for us.</string>
    <string name="code_validation_intro2_callerid">After closing the call, come back here and tap the verify button below.</string>
    <string name="code_validation_intro_manual">Please insert the verification code you received. Please note that a verification code can be used only once.</string>
    <string name="hint_validation_name">Your name</string>
    <string name="hint_validation_number">Your number</string>
    <string name="hint_validation_code">Verification code</string>
    <string name="warn_invalid_number">Please enter a valid phone number.</string>
    <string name="msg_validating_phone">Requesting registration&#8230;</string>
    <string name="msg_importing_key">Importing personal key&#8230;</string>
    <string name="title_confirm_cancel_registration">Cancel registration?</string>
    <string name="confirm_cancel_registration">If you go back you\'ll have to start registration from scratch. If you need to switch to another app, just use the device home button.</string>
    <string name="msg_initializing">Registering to the Kontalk network&#8230;</string>
    <string name="msg_authenticated">Registered to the network!</string>
    <string name="share">Share</string>
    <string name="resend">Send again</string>
    <string name="save_attachment">Save attachment</string>
    <string name="copy_message_text">Copy text</string>
    <string name="delete_message">Delete message</string>
    <string name="confirm_delete_all">Delete all chats</string>
    <string name="confirm_will_delete_all">All chats will be deleted.</string>
    <string name="sending_message">Sending message&#8230;</string>
    <string name="message_text_copied">Message text copied.</string>
    <string name="call">Call</string>
    <string name="mark_read">Read</string>
    <string name="reply">Reply</string>
    <string name="open_conversation">View</string>
    <string name="view_contact">View contact</string>
    <string name="view_conversation">View chat</string>
    <string name="delete_thread">Delete chat</string>
    <string name="menu_ctx_archive_threads">Archive</string>
    <string name="menu_ctx_unarchive_threads">Unarchive</string>
    <string name="menu_ctx_delete_threads">Delete</string>
    <string name="menu_ctx_sticky">Favorite</string>
    <string name="delete_thread_messages">Delete chat history</string>
    <string name="confirm_delete_thread">Delete chat</string>
    <string name="confirm_will_delete_thread">The entire chat will be deleted.</string>
    <string name="new_messages">New messages</string>
    <string name="only_one_account_supported">Only one Kontalk account is supported.</string>
    <string name="hint_enter_text">Enter your text here</string>
    <string name="hint_type_to_compose">Type to compose</string>
    <string name="hint_open_kbd_to_compose">Open keyboard to compose message</string>
    <string name="view_image">View image</string>
    <string name="title_message_options">Message options</string>
    <string name="menu_message_details">Details</string>
    <string name="title_message_details">Message details</string>
    <string name="message_type_label">Type:\u0020</string>
    <string name="text_message">Text message</string>
    <string name="location_message">Location message</string>
    <string name="image_message">Image message</string>
    <string name="audio_message">Audio message</string>
    <string name="from_label">From:\u0020</string>
    <string name="to_address_label">To:\u0020</string>
    <string name="sent_label">Sent:\u0020</string>
    <string name="received_label">Received:\u0020</string>
    <string name="error_label">Error:\u0020</string>
    <string name="sending_label">Sending:\u0020</string>
    <string name="refused_label">Not accepted:\u0020</string>
    <string name="notdelivered_label">Not delivered:\u0020</string>
    <string name="delivered_label">Delivered:\u0020</string>
    <string name="encrypted_label">Encrypted:\u0020</string>
    <string name="security_label">Security:\u0020</string>
    <string name="size_label">Size:\u0020</string>
    <string name="size_unknown">(unknown)</string>
    <string name="title_file_info">File information</string>
    <string name="pref_restart_msgcenter">Restart message center</string>
    <string name="pref_title_restart_msgcenter">Use this if Kontalk is not working properly</string>
    <string name="pref_idle_time">Disconnect when idle</string>
    <string name="pref_title_idle_time">How long to wait before disconnecting for inactivity</string>
    <string name="pref_wakeup_time">Reconnect to server</string>
    <string name="pref_title_wakeup_time">How long to wait before reconnecting to the server after an inactivity period. Used only if push notifications are not available or network quality is very bad</string>
    <string name="pref_maintenance">Maintenance</string>
    <string name="pref_regenerate_keypair">Regenerate personal key</string>
    <string name="pref_title_regenerate_keypair">Use this in case your personal key has been compromised</string>
    <string name="pref_regenerate_keypair_confirm">A new key pair will be generated and assigned to your account. Your old key will become invalid.</string>
    <string name="contacts_list_title">Choose a contact</string>
    <string name="contacts_list_recents_title">Recent chats</string>
    <string name="position_screen_title">Position</string>
    <string name="pref_messaging_settings">Messaging</string>
    <string name="pref_privacy_settings">Privacy</string>
    <string name="pref_encrypt">Encrypt messages</string>
    <string name="pref_encrypt_userdata">Encrypt personal data</string>
    <string name="pref_title_on_encrypt_userdata">Status message will be visible only to users having your phone number</string>
    <string name="pref_update_server_list">Update server list</string>
    <string name="pref_title_push_notifications">Use push notifications if server supports it, saves battery</string>
    <string name="pref_push_notifications">Push notifications</string>
    <string name="pref_notification_settings">Notifications</string>
    <string name="pref_enable_notifications">Notifications</string>
    <string name="pref_enable_notification_led">Notification LED</string>
    <string name="pref_notification_led_color">Notification LED color</string>
    <string name="pref_title_enable_notifications">Display message notifications in status bar</string>
    <string name="pref_ringtone">Select ringtone</string>
    <string name="pref_vibrate">Vibrate</string>
    <string name="pref_title_vibrate">Also vibrate when notified</string>
    <string name="pref_appearance_settings">Appearance</string>
    <string name="pref_font_size">Font size</string>
    <string name="pref_custom_background">Custom background</string>
    <string name="pref_background_uri">Background</string>
    <string name="pref_title_background_uri">Set custom conversations background image</string>
    <string name="pref_title_custom_background">Pick a background using the option below</string>
    <string name="pref_remove_prefix">Dial prefix</string>
    <string name="pref_change_passphrase">Change personal key password</string>
    <string name="pref_title_remove_prefix">Remove some dial prefix in Kontalk to match phone numbers correctly</string>
    <string name="pref_export_keypair">Export personal key</string>
    <string name="pref_balloons">Chat balloon theme</string>
    <string name="menu_open_map">Open in maps</string>
    <string name="menu_map">Map</string>
    <string name="menu_satellite">Satellite</string>
    <string name="pref_other">Other</string>
    <string name="pref_help">Help</string>
    <string name="pref_donate">Donate</string>
    <string name="pref_about">About</string>
    <string name="pref_sync_sim_contacts">Sync from SIM contacts</string>
    <string name="pref_title_sync_sim_contacts">Include SIM contacts when checking for registered users</string>
    <string name="pref_sync_invisible_contacts">Include invisible contacts</string>
    <string name="pref_title_sync_invisible_contacts">Include contacts not displayed in Contacts app. Enable if you use DAVx⁵ or other contacts sync app</string>
    <string name="pref_server_messages">Receive server messages</string>
    <string name="pref_title_server_messages">Allow messages from server administrators. You might miss important news if you disable this</string>
    <string name="pref_accept_any_certificate">Accept any SSL certificate</string>
    <string name="pref_delete_account">Delete your account</string>
    <string name="pref_text_enter">Enter button</string>
    <string name="pref_title_text_enter">Select behavior of enter button in keyboard</string>
    <string name="pref_media_settings">Media</string>
    <string name="pref_image_resize">Resize images</string>
    <string name="pref_show_blocked_users">Show blocked users</string>
    <string name="pref_debug_log">Enable debug log</string>
    <string name="pref_send_debug_log">Send debug log</string>
</resources>