<?xml version="1.0" encoding="utf-8"?>
<!-- Kontalk Android client
     Copyright (C) 2020 Kontalk Devteam <devteam@kontalk.org>

     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.

     This program is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.

     You should have received a copy of the GNU General Public License
     along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:key="pref_key_network_settings" android:title="@string/pref_network_settings">
        <EditTextPreference
            android:dialogTitle="@string/pref_network_uri"
            android:positiveButtonText="@android:string/ok"
            android:negativeButtonText="@android:string/cancel"
            android:title="@string/pref_network_uri"
            android:summary="@string/pref_title_network_uri"
            android:key="pref_network_uri"
            android:singleLine="true" android:inputType="textUri"/>
        <CheckBoxPreference
            android:key="pref_push_notifications"
            android:summary="@string/pref_title_push_notifications"
            android:title="@string/pref_push_notifications"
            android:defaultValue="@bool/pref_default_push_notifications"
            />
        <ListPreference
            android:key="pref_idle_time"
            android:title="@string/pref_idle_time"
            android:summary="@string/pref_title_idle_time"
            android:entries="@array/idle_time_labels"
            android:entryValues="@array/idle_time_values"
            android:defaultValue="@integer/pref_default_idle_time"/>
        <ListPreference
            android:key="pref_wakeup_time"
            android:title="@string/pref_wakeup_time"
            android:summary="@string/pref_title_wakeup_time"
            android:entries="@array/wakeup_time_labels"
            android:entryValues="@array/wakeup_time_values"
            android:defaultValue="@integer/pref_default_wakeup_time"/>
        <CheckBoxPreference android:key="pref_accept_any_certificate"
            android:title="@string/pref_accept_any_certificate"
            android:defaultValue="@bool/pref_default_accept_any_certificate"
            />
    </PreferenceCategory>

    <PreferenceCategory android:key="pref_messaging_settings"
        android:title="@string/pref_messaging_settings">
        <Preference android:key="pref_privacy_settings"
            android:title="@string/pref_privacy_settings"
            android:persistent="false"
            android:icon="@drawable/ic_pref_privacy"
            />
        <EditTextPreference
            android:key="pref_remove_prefix"
            android:dialogTitle="@string/pref_remove_prefix"
            android:positiveButtonText="@android:string/ok"
            android:negativeButtonText="@android:string/cancel"
            android:title="@string/pref_remove_prefix"
            android:summary="@string/pref_title_remove_prefix"
            android:singleLine="true" android:inputType="phone"/>
        <CheckBoxPreference android:key="pref_sync_sim_contacts"
            android:summary="@string/pref_title_sync_sim_contacts"
            android:title="@string/pref_sync_sim_contacts"
            android:defaultValue="@bool/pref_default_sync_sim_contacts"
            />
        <CheckBoxPreference android:key="pref_sync_nonvisible_contacts"
            android:summary="@string/pref_title_sync_invisible_contacts"
            android:title="@string/pref_sync_invisible_contacts"
            android:defaultValue="@bool/pref_default_sync_invisible_contacts"
            />
    </PreferenceCategory>

    <PreferenceCategory android:key="pref_maintenance"
        android:title="@string/pref_maintenance">
        <CheckBoxPreference android:key="pref_debug_log"
            android:title="@string/pref_debug_log"
            android:defaultValue="@bool/pref_default_debug_log"
            />
        <org.kontalk.ui.prefs.SendDebugLogPreference android:key="pref_send_debug_log"
            android:title="@string/pref_send_debug_log"
            android:dependency="pref_debug_log"
            android:icon="@drawable/ic_pref_send_debug_log"
            />
    </PreferenceCategory>

    <PreferenceCategory android:key="pref_other"
        android:title="@string/pref_other">
        <org.kontalk.ui.prefs.HelpPreference android:key="pref_help"
            android:title="@string/pref_help"
            android:icon="@drawable/ic_pref_help"
            />
        <Preference android:key="pref_donate"
            android:title="@string/pref_donate"
            android:icon="@drawable/ic_pref_donate"
            >
            <intent
             android:targetClass="org.kontalk.ui.AboutActivity"
             android:targetPackage="@string/application_id"
             android:action="org.kontalk.DONATION" />
        </Preference>
        <Preference android:key="pref_about"
            android:title="@string/pref_about"
            android:icon="@drawable/ic_pref_about"
            >
            <intent
             android:targetClass="org.kontalk.ui.AboutActivity"
             android:targetPackage="@string/application_id" />
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>
